--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,16 @@ php:
   - 7.0
   - 7.1
   - 7.2
+  - 7.3
+  - 7.4
+  - 8.0
+  - 8.1
 
 install:
   - composer install
 
 script:
-  - ./vendor/bin/phpunit --coverage-clover=coverage.clover
+  - XDEBUG_MODE=coverage ./vendor/bin/phpunit --coverage-clover=coverage.clover
 
 after_script:
   - wget https://scrutinizer-ci.com/ocular.phar
