--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,10 @@
     }
   ],
   "require": {
-    "php" : "^7.0||^8.0"
+    "php" : "^7.0|^8.0"
   },
   "require-dev": {
-    "phpunit/phpunit" : "^9.5",
+    "phpunit/phpunit" : "^6.3|^9.5",
     "mockery/mockery": "^1.0"
   },
   "autoload": {
