--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,4 +34,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: coverage
-          path: ./coverage/
+          path: ./coverage/${{ matrix.php-version }}/
