--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Run test suite
         run: |
-          ./vendor/bin/phpunit --coverage-clover ./coverage/coverage.clover --coverage-html ./coverage/html/
+          ./vendor/bin/phpunit --coverage-clover ./coverage/${{ matrix.php-version }}/coverage.clover --coverage-html ./coverage/${{ matrix.php-version }}/html/
 
       - name: Save coverage results
         uses: actions/upload-artifact@v3
