--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,11 +28,10 @@ jobs:
 
       - name: Run test suite
         run: |
-          mkdir -p ./coverage/${{ matrix.php-version }}
-          ./vendor/bin/phpunit --coverage-clover ./coverage/${{ matrix.php-version }}/coverage.clover --coverage-html ./coverage/${{ matrix.php-version }}/html/
+          ./vendor/bin/phpunit --coverage-clover ./coverage/coverage.clover --coverage-html ./coverage/html/
 
       - name: Save coverage results
         uses: actions/upload-artifact@v3
         with:
-          name: coverage
-          path: ./coverage/${{ matrix.php-version }}/
+          name: coverage-php${{ matrix.php-version }}
+          path: ./coverage/
