--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,6 +3,10 @@ name: Tests
 on:
   push:
   pull_request:
+  workflow_dispatch:
+  schedule:
+    # “At 17:45 on Friday.”
+    - cron:  '45 17 * * 5'
 
 jobs:
   build:
@@ -29,13 +33,14 @@ jobs:
       - name: Run test suite
         run: |
           mkdir -p ./coverage/php-${{ matrix.php-version }}
-          php -v
-          php -v > ./coverage/php-${{ matrix.php-version }}/php.txt
-          ./vendor/bin/phpunit --version > ./coverage/php-${{ matrix.php-version }}/phpunit.txt
           ./vendor/bin/phpunit --configuration ./phpunit-${{ matrix.php-version }}.xml --coverage-clover ./coverage/php-${{ matrix.php-version }}/coverage.clover --coverage-html ./coverage/php-${{ matrix.php-version }}/html/
+
+      - name: Get current date/time
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y%m%d-%H%M')"
 
       - name: Save coverage results
         uses: actions/upload-artifact@v3
         with:
-          name: coverage
+          name: coverage_php-array-to-xml_${{ steps.date.outputs.date }}
           path: ./coverage
