--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,8 +5,8 @@ on:
   pull_request:
   workflow_dispatch:
   schedule:
-    # “At 17:45 on Friday.”
-    - cron:  '45 17 * * 5'
+    # “At 12:00 on Wednesdays.”
+    - cron:  '0 12 * * 3'
 
 jobs:
   build:
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php-version: ['7.0', '7.1', '7.2', '7.3', '7.4', '8.0', '8.1', '8.2']
+        php-version: ['7.0', '7.1', '7.2', '7.3', '7.4', '8.0', '8.1', '8.2', '8.3']
 
     steps:
       - uses: actions/checkout@v3
