--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,5 +40,5 @@ jobs:
       - name: Save coverage results
         uses: actions/upload-artifact@v4
         with:
-          name: coverage_clover_php-array-to-xml
+          name: coverage_clover_php-array-to-xml-${{ matrix.php-version }}
           path: ./coverage
