--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,12 +1,12 @@
 name: Tests
 
 on:
-  push:
+  #push:
   pull_request:
   workflow_dispatch:
   schedule:
-    # “At 12:00 on Wednesdays.”
-    - cron:  '0 12 * * 3'
+    # “At 12:00”
+    - cron:  '0 12 * * *'
 
 jobs:
   build:
@@ -40,5 +40,5 @@ jobs:
       - name: Save coverage results
         uses: actions/upload-artifact@v4
         with:
-          name: coverage_clover_php-array-to-xml
+          name: coverage_clover_php-array-to-xml-${{ matrix.php-version }}
           path: ./coverage
