--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,3 +5,9 @@ updates:
     open-pull-requests-limit: 25
     schedule:
       interval: "daily"
+
+  - package-ecosystem: "composer"
+    directory: "/"
+    open-pull-requests-limit: 25
+    schedule:
+      interval: "daily"
