add tests for php 8.5

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,10 @@
 services:
 
+  php8.5:
+    build:
+      context: .
+      dockerfile: .docker/Dockerfile-php8.5
+
   php8.4:
     build:
       context: .
